modules/vpc_module/vpc.tf
resource "aws_vpc" "this" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = merge(local.resource_tags, {
    Name = "${var.name}-vpc"
  })
}
